# touhouc

./: CMakeLists.txt  requirements.txt
src/: ai.c  ai.h  assets.c  assets.h  bullets.c  bullets.h  compact_array.c  compact_array.h  enemy.c  enemy.h  enemy_factory.c  enemy_factory.h  firing_patterns.c  firing_patterns.h  input.h  items.c  items.h  main.c  menu.c  menu.h  player.c  player.h  spawner.c  spawner.h  sprite.c  sprite.h  timer.c  timer.h  touhou.c  touhou.h
src/networking/: client.c  client.h  packets.c  packets.h  server.c  server.h
